--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -33,16 +33,16 @@
                     <a href="#none" class="content"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
+                    <a href="https://www.apple.com/apple-podcasts/" class="content" target="_blank"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
+                    <a href="https://soundcloud.com/n1acqe23gscl" class="content" target="_blank"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
+                    <a href="https://podcasts.google.com/" class="content" target="_blank"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
+                    <a href="https://www.spotify.com/kr-ko/" class="content" target="_blank"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
                   </li>
                 </ul>
                 <ul class="dark_ver dark_hide">
@@ -50,16 +50,16 @@
                     <a href="#none" class="content"><img src="../assets/images/logo/logoipsum_1.png" alt="podcast_available_on logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts logo"></a>
+                    <a href="https://www.apple.com/apple-podcasts/" class="content" target="_blank"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound_cloud logo"></a>
+                    <a href="https://soundcloud.com/n1acqe23gscl" class="content" target="_blank"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound_cloud logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast_w.png" alt="google_podcast logo"></a>
+                    <a href="https://podcasts.google.com/" class="content" target="_blank"><img src="../assets/images/logo/google_podcast_w.png" alt="google_podcast logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/spotify_w.png" alt="spotify logo"></a>
+                    <a href="https://www.spotify.com/kr-ko/" class="content" target="_blank"><img src="../assets/images/logo/spotify_w.png" alt="spotify logo"></a>
                   </li>
                 </ul>
               </div>
@@ -142,6 +142,7 @@
                     Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
                     Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
                   </div>
+                  <div class="review_bar"></div>
                 </div>
               </li>
               <li class="swiper-slide">
@@ -154,6 +155,8 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Lorem eget condimentum enim libero ultricies amet odio fringilla.
                   </div>
+                  <div class="review_bar"></div>
+
                 </div>
               </li>
               <li class="swiper-slide">
@@ -167,6 +170,7 @@
                     Lorem eget condimentum enim libero ultricies amet odio fringilla.
                     Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
                     Penatibus tortor consequat.
+                    <div class="review_bar"></div>
                   </div>
                 </div>
               </li>
