--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -27,6 +27,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="promotion.html">Promotion</a></li>
+
         </ul>
         <!-- //menu -->
 
