--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,6 +48,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="promotion.html">Promotion</a></li>
+
         </ul>
         <!-- //menu -->
 
@@ -190,6 +192,7 @@
         <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="promotion.html">Promotion</a></li>
       </ul>
     </div>
 
@@ -204,10 +207,10 @@
     <div class="subscribe">
       <h4>Subscribe</h4>
       <ul>
-        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
-        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
-        <li class="google_logo"><a href="https://podcasts.google.com/"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
-        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/" target="_blank"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl" target="_blank"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="https://podcasts.google.com/" target="_blank"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/" target="_blank"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
       </ul>
     </div>
     <!-- dark_mode -->
