--- a/pages/home.html
+++ b/pages/home.html
@@ -47,6 +47,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="promotion.html">Promotion</a></li>
+
         </ul>
         <!-- //menu -->
 
@@ -93,16 +95,16 @@
                     <a href="#none" class="content"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
+                    <a href="https://www.apple.com/apple-podcasts/" class="content" target="_blank"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
+                    <a href="https://soundcloud.com/n1acqe23gscl" class="content" target="_blank"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
+                    <a href="https://podcasts.google.com/" class="content" target="_blank"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
+                    <a href="https://www.spotify.com/kr-ko/" class="content" target="_blank"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
                   </li>
                 </ul>
                 <ul class="dark_ver dark_hide">
@@ -110,16 +112,16 @@
                     <a href="#none" class="content"><img src="../assets/images/logo/logoipsum_1.png" alt="podcast_available_on logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts logo"></a>
+                    <a href="https://www.apple.com/apple-podcasts/" class="content" target="_blank"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound_cloud logo"></a>
+                    <a href="https://soundcloud.com/n1acqe23gscl" class="content" target="_blank"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound_cloud logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast_w.png" alt="google_podcast logo"></a>
+                    <a href="https://podcasts.google.com/" class="content" target="_blank"><img src="../assets/images/logo/google_podcast_w.png" alt="google_podcast logo"></a>
                   </li>
                   <li>
-                    <a href="#none" class="content"><img src="../assets/images/logo/spotify_w.png" alt="spotify logo"></a>
+                    <a href="https://www.spotify.com/kr-ko/" class="content" target="_blank"><img src="../assets/images/logo/spotify_w.png" alt="spotify logo"></a>
                   </li>
                 </ul>
               </div>
@@ -217,6 +219,45 @@
           </div>
         </div>
       </li>
+      <li data-type="d">
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 4: How to build a world-class business brand</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
+        </div>
+      </li>
+      <li data-type="e">
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 5: Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
+        </div>
+      </li>
+      <li data-type="f">
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 6: Should I raise money for my startup, or not?</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
   <!-- //typ_list_wrap -->
@@ -250,6 +291,7 @@
                     Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
                     Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
                   </div>
+                  <div class="review_bar"></div>
                 </div>
               </li>
               <li class="swiper-slide">
@@ -262,6 +304,8 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Lorem eget condimentum enim libero ultricies amet odio fringilla.
                   </div>
+                  <div class="review_bar"></div>
+
                 </div>
               </li>
               <li class="swiper-slide">
@@ -275,6 +319,7 @@
                     Lorem eget condimentum enim libero ultricies amet odio fringilla.
                     Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
                     Penatibus tortor consequat.
+                    <div class="review_bar"></div>
                   </div>
                 </div>
               </li>
@@ -373,6 +418,7 @@
         <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="promotion.html">Promotion</a></li>
       </ul>
     </div>
 
@@ -387,10 +433,10 @@
     <div class="subscribe">
       <h4>Subscribe</h4>
       <ul>
-        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
-        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
-        <li class="google_logo"><a href="https://podcasts.google.com/"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
-        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/" target="_blank"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl" target="_blank"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="https://podcasts.google.com/" target="_blank"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/" target="_blank"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
       </ul>
     </div>
     <!-- dark_mode -->
